Indication enfants ok dans le programme du samedi

--- a/programme/samedi.html
+++ b/programme/samedi.html
@@ -132,7 +132,7 @@
 					<button class="button TR" onclick="showType('TR');" style="opacity: 1;">Table ronde</button>
 				</div>
 				<div style="margin-top:0.8em;margin-left:50px;display:flex">
-					<i class="material-icons-outlined">lock</i>Session limitée en nombre de participants
+					<i class="material-icons-outlined">lock</i><span>Session limitée en nombre de participants</span><i class="material-icons-outlined" style="margin-left:100px">face</i>Adapté aux enfants (adultes bienvenus)
 				</div>
 			</div>
 			<!--div class="input-group mb-3 telephone d-md-none" data-filter-group="FiltresTelephone"-->
@@ -227,9 +227,12 @@
 								<div class="enfant">
 									<h3>Fish Philosophy</h3>
 									<p>Kervin KUENY</p>
-									<div class="limite-participants"><i class="material-icons-outlined">
+									<div class="limite-participants-enfants"><i class="material-icons-outlined">
 										lock
 									</i>24
+									<i class="material-icons-outlined" style="margin-left:0.5rem">
+										face
+									</i>
 									</div>
 								</div>
 							</div>
@@ -292,7 +295,7 @@
 								<div class="enfant">
 									<h3>Le défi collaboratif Lego - Testez votre agilité collective !</h3>
 									<p>Damien ROQUEL</p>
-									<div class="limite-participants"><i class="material-icons-outlined">
+									<div class="limite-participants-enfants"><i class="material-icons-outlined">
 										lock
 									</i>40
 									</div>
@@ -326,9 +329,12 @@
 								<div class="enfant">
 									<h3>Devenez une famille Agile</h3>
 									<p>Alexandrine BARBIEUX &amp; Apolline LOUBRADOU</p>
-									<div class="limite-participants"><i class="material-icons-outlined">
+									<div class="limite-participants-enfants"><i class="material-icons-outlined">
 										lock
 									</i>25
+									<i class="material-icons-outlined" style="margin-left:0.5rem">
+										face
+									</i>
 									</div>
 								</div>
 							</div>
@@ -345,9 +351,12 @@
 								<div class="enfant">
 									<h3>Dessine les super-pouvoirs d'un chevalier</h3>
 									<p>Fany BERTHELOT</p>
-									<div class="limite-participants"><i class="material-icons-outlined">
+									<div class="limite-participants-enfants"><i class="material-icons-outlined">
 										lock
 									</i>20
+									<i class="material-icons-outlined" style="margin-left:0.5rem">
+										face
+									</i>
 									</div>
 								</div>
 							</div>
@@ -464,6 +473,11 @@
 								<div class="enfant">
 									<h3>Le fabuleux destin de Tim Member : la Der des Ders !</h3>
 									<p>Franck RAGEADE</p>
+									<div class="limite-participants-enfants">
+										<i class="material-icons-outlined" style="margin-left:0.5rem">
+											face
+										</i>
+									</div>
 								</div>
 							</div>
 						</a>
@@ -479,7 +493,7 @@
 								<div class="enfant">
 									<h3>Qui veut créer son jeu péda ?</h3>
 									<p>Suzon BEAUSSANT</p>
-									<div class="limite-participants"><i class="material-icons-outlined">
+									<div class="limite-participants-enfants"><i class="material-icons-outlined">
 										lock
 									</i>40
 									</div>
@@ -498,6 +512,11 @@
 								<div class="enfant">
 									<h3>REX sur "Code moi un mouton"</h3>
 									<p>Vickrame UJOODHA</p>
+									<div class="limite-participants-enfants">
+										<i class="material-icons-outlined" style="margin-left:0.5rem">
+											face
+										</i>
+									</div>
 								</div>
 							</div>
 						</a>
@@ -513,7 +532,7 @@
 								<div class="enfant">
 									<h3>La sûreté psychologique, pour un collectif performant</h3>
 									<p>Céline SWIERKOWSKI</p>
-									<div class="limite-participants"><i class="material-icons-outlined">
+									<div class="limite-participants-enfants"><i class="material-icons-outlined">
 										lock
 									</i>30
 									</div>
@@ -532,6 +551,11 @@
 								<div class="enfant">
 									<h3>Comment manipuler les adultes pour avoir ce que l'on veut ?</h3>
 									<p>Constantin GUAY</p>
+									<div class="limite-participants-enfants">
+										<i class="material-icons-outlined" style="margin-left:0.5rem">
+											face
+										</i>
+									</div>
 								</div>
 							</div>
 						</a>
@@ -547,9 +571,12 @@
 							<div class="enfant">
 								<h3>Devoxx For Kids</h3>
 								<p>Nicolas LEDEZ</p>
-								<div class="limite-participants"><i class="material-icons-outlined">
+								<div class="limite-participants-enfants"><i class="material-icons-outlined">
 									lock
 								</i>20
+								<i class="material-icons-outlined" style="margin-left:0.5rem">
+									face
+								</i>
 								</div>
 							</div>
 						</div>
@@ -585,9 +612,12 @@
 								<div class="enfant">
 									<h3>Personal Kanban pour petits et grands</h3>
 									<p>Simon Pichon</p>
-									<div class="limite-participants"><i class="material-icons-outlined">
+									<div class="limite-participants-enfants"><i class="material-icons-outlined">
 										lock
 									</i>12
+									<i class="material-icons-outlined" style="margin-left:0.5rem">
+										face
+									</i>
 									</div>
 								</div>
 							</div>
@@ -604,7 +634,7 @@
 								<div class="enfant">
 									<h3>Saving the world</h3>
 									<p>Karine SABATIER, Serge HARDY, Sylvain REVEREAULT, Antoine CAILLY &amp; Luc SOREL-GIFFO</p>
-									<div class="limite-participants"><i class="material-icons-outlined">
+									<div class="limite-participants-enfants"><i class="material-icons-outlined">
 										lock
 									</i>50
 									</div>
@@ -623,9 +653,12 @@
 								<div class="enfant">
 									<h3>Toyota Kata : apprendre facilement une démarche d'amélioration continue</h3>
 									<p>Anne GABRILLAGUES</p>
-									<div class="limite-participants"><i class="material-icons-outlined">
+									<div class="limite-participants-enfants"><i class="material-icons-outlined">
 										lock
 									</i>25
+									<i class="material-icons-outlined" style="margin-left:0.5rem">
+										face
+									</i>
 									</div>
 								</div>
 							</div>
@@ -673,6 +706,11 @@
 								<div class="enfant">
 									<h3>Le théâtre forum, (dé)jouons ensemble les scènes de l'entreprise</h3>
 									<p>Jérôme URVOAS, Charly LACOSTE &amp; Pascal PEIDRO</p>
+									<div class="limite-participants-enfants">
+										<i class="material-icons-outlined" style="margin-left:0.5rem">
+											face
+										</i>
+									</div>
 								</div>
 							</div>
 						</a>
@@ -703,6 +741,11 @@
 								<div class="enfant">
 									<h3>Les 4 accords toltèques : kesaco</h3>
 									<p>Laurent MINGUET</p>
+									<div class="limite-participants-enfants">
+										<i class="material-icons-outlined" style="margin-left:0.5rem">
+											face
+										</i>
+									</div>
 								</div>
 							</div>
 						</a>
@@ -718,7 +761,7 @@
 								<div class="enfant">
 									<h3>Pédagogie Agile</h3>
 									<p>Manuella CHAINOT-BATAILLE</p>
-									<div class="limite-participants"><i class="material-icons-outlined">
+									<div class="limite-participants-enfants"><i class="material-icons-outlined">
 										lock
 									</i>40
 									</div>
@@ -737,6 +780,11 @@
 								<div class="enfant">
 									<h3>Parents et enfants : et si "devoirs à la maison" rimait avec "désir et plaisir" ?</h3>
 									<p>Steeve EVERS</p>
+									<div class="limite-participants-enfants">
+										<i class="material-icons-outlined" style="margin-left:0.5rem">
+											face
+										</i>
+									</div>
 								</div>
 							</div>
 						</a>
