--- a/programme/vendredi.html
+++ b/programme/vendredi.html
@@ -257,7 +257,7 @@
 								<div class="enfant">
 									<h3>Agil'o Park, un serious game pour apprendre à prioriser</h3>
 									<p>Aurélie ROBERT &amp; Antony GUILLOTEAU</p>
-									<div class="limite-participants"><i class="material-icons-outlined">
+									<div class="limite-participants-enfants"><i class="material-icons-outlined">
 										lock
 									</i>24
 									</div>
@@ -291,7 +291,7 @@
 								<div class="enfant">
 									<h3>Initiation à la Systémique interactionnelle</h3>
 									<p>Christophe KEROMEN</p>
-									<div class="limite-participants"><i class="material-icons-outlined">
+									<div class="limite-participants-enfants"><i class="material-icons-outlined">
 										lock
 									</i>30
 									</div>
@@ -310,7 +310,7 @@
 								<div class="enfant">
 									<h3>Facilitation Graphique, passez à l'action !</h3>
 									<p>Fany BERTHELOT &amp; Estelle VIOT</p>
-									<div class="limite-participants"><i class="material-icons-outlined">
+									<div class="limite-participants-enfants"><i class="material-icons-outlined">
 										lock
 									</i>20
 									</div>
@@ -378,7 +378,7 @@
 								<div class="enfant">
 									<h3>Améliorer son feedback, exemple en revue de code</h3>
 									<p>Julien CIME</p>
-									<div class="limite-participants"><i class="material-icons-outlined">
+									<div class="limite-participants-enfants"><i class="material-icons-outlined">
 										lock
 									</i>16
 									</div>
@@ -479,7 +479,7 @@
 								<div class="enfant">
 									<h3>Un Pacman Ping ? Ou Impact Mapping ?</h3>
 									<p>Alexandre SICARD & Arnaud FLORENTIN</p>
-									<div class="limite-participants"><i class="material-icons-outlined">
+									<div class="limite-participants-enfants"><i class="material-icons-outlined">
 										lock
 									</i>30
 									</div>
@@ -498,7 +498,7 @@
 								<div class="enfant">
 									<h3>Coding Dojos : partagez les bonnes pratiques</h3>
 									<p>Pascal LE MERRER</p>
-									<div class="limite-participants"><i class="material-icons-outlined">
+									<div class="limite-participants-enfants"><i class="material-icons-outlined">
 										lock
 									</i>30
 									</div>
@@ -517,7 +517,7 @@
 								<div class="enfant">
 									<h3>Cook my Retro !</h3>
 									<p>Jean-Baptiste LE GOFF &amp; Kavishan GANESHAMOORTHY</p>
-									<div class="limite-participants"><i class="material-icons-outlined">
+									<div class="limite-participants-enfants"><i class="material-icons-outlined">
 										lock
 									</i>24
 									</div>
@@ -536,7 +536,7 @@
 								<div class="enfant">
 									<h3>Mes premiers pas de Scrum Master</h3>
 									<p>Elodie TUAL &amp; Maryline ESTIVAL</p>
-									<div class="limite-participants"><i class="material-icons-outlined">
+									<div class="limite-participants-enfants"><i class="material-icons-outlined">
 										lock
 									</i>25
 									</div>
@@ -650,7 +650,7 @@
 								<div class="enfant">
 									<h3>On sait par où on commence mais on ne sait pas si et où on en sortira</h3>
 									<p>Olivier RENVERSEAU & Gilles GUYONVARC’H</p>
-									<div class="limite-participants"><i class="material-icons-outlined">
+									<div class="limite-participants-enfants"><i class="material-icons-outlined">
 										lock
 									</i>10
 									</div>
